Leave rules with empty decl blocks in the sheet so they're picked up by the DOM.  Bug 112854, r=dbaron, sr=attinasi